--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -80,8 +80,8 @@
   <string name="also_end_conversation">Закончить эту беседу впоследствии</string>
   <string name="send_unencrypted_message">Отправить нешифрованное сообщение</string>
   <string name="send_message_to_x">Отправить сообщение для %s</string>
-  <string name="send_otr_message"></string>
-  <string name="send_omemo_message">Отправить OMEMO защифрованное сообщение</string>
+  <string name="send_otr_message">Отправить OTR защифрованное сообщение</string>
+  <string name="send_omemo_message"></string>
   <string name="send_omemo_x509_message">Послать v\\OMEMO зашифрованное сообщение</string>
   <string name="send_pgp_message">Отправить OpenPGP защифрованное сообщение</string>
   <string name="your_nick_has_been_changed">Ваш псевдоним был изменен</string>
